fixed ListWithOverflowIcon

--- a/src/components/organisms/ListWithOverflowIcon/styles.module.scss
+++ b/src/components/organisms/ListWithOverflowIcon/styles.module.scss
@@ -2,6 +2,7 @@
   display: grid;
   column-gap: clamp(32px, calc(48vw/7.68), 48px);
   row-gap: 32px;
+
   .item {
     padding: clamp(24px, calc(30vw/7.68), 30px) clamp(16px, calc(20vw/7.68), 20px);
     border: 1px solid var(--neutral-700);
@@ -9,56 +10,70 @@
     display: grid;
     grid-template-areas: "icon icon" "title ." "img description";
     column-gap: 32px;
-    @media (min-width: 800px){
+
+    @media (min-width: 800px) {
       grid-template-columns: 1fr 1fr;
       align-items: flex-start;
-      .icon {
+
+      .iconWrapper {
         grid-column: 3/1;
       }
     }
+
     .title {
       grid-area: title;
-      margin-bottom:32px;
+      margin-bottom: 32px;
     }
-    .icon {
-      margin: 0 auto;
-      grid-area:icon;
-      width: 60px;
-      height: 60px;
+
+    .iconWrapper {
       border-radius: 50%;
       border: 1px solid var(--neutral-700);
       background: var(--neutral-950);
-      margin-top: calc(clamp(-32px, calc(-32vw/7.68), -24px) - 30px); 
-      padding:12px;
-      object-fit:contain;
-      display:block;
+      width: 60px;
+      height: 60px;
+      grid-area: icon;
+      padding: 12px;
+      margin: 0 auto;
+      margin-top: calc(clamp(-32px, calc(-32vw/7.68), -24px) - 30px);
     }
+
+    .icon {
+      height: 100%;
+      width: 100%;
+      object-fit: contain;
+      display: block;
+    }
+
     h2 {
-      font-size: clamp(calc(18rem/16), calc(28vw/7.68), calc(28rem/16)); 
+      font-size: clamp(calc(18rem/16), calc(28vw/7.68), calc(28rem/16));
     }
+
     .description {
       font-size: clamp(calc(16rem/16), calc(18vw/7.68), calc(18rem/16));
-      margin-top:18px;
       grid-area: description;
-      p:not(:last-child){
+
+      p:not(:last-child) {
         margin-bottom: 40px;
       }
     }
+
     @media(max-width: 799px) {
       grid-template-areas: "icon" "title" "img" "description";
-      gap:32px;
+      gap: 32px;
+
       .description {
-        margin-top:unset;
-        p:not(:last-child){
-          margin-bottom:24px;
+        p:not(:last-child) {
+          margin-bottom: 24px;
         }
       }
     }
+
     .img {
-      width:100%;
-      height:100%;
-      object-fit: cover;
-      grid-area:img;
+      width: 100%;
+      height: 100%;
+      object-position: top;
+      object-fit: contain;
+      grid-area: img;
     }
   }
 }
